Fixes issue where slideshow titles and descriptions were not visible when the slide was made to fit the space, added a dark background to fix this

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -639,6 +639,10 @@ input[type="search"]::-webkit-search-decoration {
 	}
 }
 
+.widget.responsiveslideshow span.inner {
+	background-color: @color-swatch6;
+}
+
 .widget.responsiveslideshow .slideshow-widget .btn-prev,
 .widget.responsiveslideshow .slideshow-widget .btn-next,
 .widget.responsiveslideshow .slideshow-widget .btn-play {
